--- a/server-node/package.json
+++ b/server-node/package.json
@@ -10,7 +10,8 @@
     "@fastify/type-provider-typebox": "^4.0.0",
     "@prisma/client": "^5.12.0",
     "@sinclair/typebox": "^0.32.20",
-    "fastify": "^4.26.2"
+    "fastify": "^4.26.2",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.6.4",
