--- a/server-node/package.json
+++ b/server-node/package.json
@@ -2,11 +2,19 @@
   "name": "server-node",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch --env-file=.env src/server.ts"
+    "build": "esbuild --platform=node --outdir=dist --target=node20 src/**",
+    "dev": "tsx watch --env-file=.env src/server.ts",
+    "start": "node --env-file=.env dist/server.js"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@fastify/cors": "^9.0.1",
     "@fastify/one-line-logger": "^1.3.0",
     "@fastify/sensible": "^5.5.0",
+    "@fastify/swagger": "^8.14.0",
+    "@fastify/swagger-ui": "^3.0.0",
     "@fastify/type-provider-typebox": "^4.0.0",
     "@prisma/client": "^5.12.0",
     "@sinclair/typebox": "^0.32.20",
@@ -15,7 +23,8 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.6.4",
-    "@types/node": "^20.12.3",
+    "@types/node": "^20.12.4",
+    "esbuild": "^0.20.2",
     "prisma": "^5.12.0",
     "tsx": "^4.7.1",
     "typescript": "~5.4.3"
