--- a/server-node/biome.json
+++ b/server-node/biome.json
@@ -2,9 +2,7 @@
 	"$schema": "https://biomejs.dev/schemas/1.6.4/schema.json",
 	"files": {
 		"ignoreUnknown": true,
-		"ignore": [
-			"node_modules"
-		]
+		"ignore": ["node_modules"]
 	},
 	"formatter": {
 		"lineWidth": 120
