--- a/server-node/Dockerfile
+++ b/server-node/Dockerfile
@@ -2,6 +2,8 @@ FROM node:20-alpine AS base
 
 RUN corepack enable && corepack install -g pnpm@8
 
+### DEPS
+
 FROM base AS deps
 
 WORKDIR /usr/src/app
@@ -9,6 +11,8 @@ WORKDIR /usr/src/app
 COPY package.json ./
 
 RUN pnpm install
+
+### BUILD
 
 FROM base AS build
 
@@ -21,10 +25,13 @@ RUN pnpm exec prisma generate
 RUN pnpm run build
 RUN pnpm prune --prod
 
-FROM base AS release
+### DEPLOY
+
+FROM base AS deploy
 
 WORKDIR /usr/src/app
 
+COPY ./prisma ./prisma
 COPY --from=build /usr/src/app/node_modules ./node_modules
 COPY --from=build /usr/src/app/dist ./dist
 COPY --from=build /usr/src/app/package.json ./package.json
