--- a/server-node/package.json
+++ b/server-node/package.json
@@ -4,7 +4,7 @@
 	"scripts": {
 		"build": "esbuild --platform=node --outdir=dist --target=node20 'src/**'",
 		"dev": "tsx watch --env-file=.env src/server.ts",
-		"start": "node --env-file=.env dist/server.js"
+		"start": "prisma migrate deploy && node dist/server.js"
 	},
 	"prisma": {
 		"seed": "tsx prisma/seed.ts"
@@ -19,13 +19,13 @@
 		"@prisma/client": "^5.12.0",
 		"@sinclair/typebox": "^0.32.20",
 		"fastify": "^4.26.2",
+		"prisma": "^5.12.0",
 		"slugify": "^1.6.6"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.6.4",
 		"@types/node": "^20.12.4",
 		"esbuild": "^0.20.2",
-		"prisma": "^5.12.0",
 		"tsx": "^4.7.1",
 		"typescript": "~5.4.3"
 	}
