--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,4 +33,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Push Image
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/nlw.service.passin:${{ steps.generate_sha.outputs.sha }}
+        run: |
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/nlw.service.passin:${{ steps.generate_sha.outputs.sha }}
+          docker tag ${{ secrets.DOCKERHUB_USERNAME }}/nlw.service.passin:${{ steps.generate_sha.outputs.sha }} ${{ secrets.DOCKERHUB_USERNAME }}/nlw.service.passin:latest
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/nlw.service.passin:latest
